# hl-sdk-new

./: Cargo.toml  README.md
examples/: 00_symbols.rs  01_info_types.rs  02_info_provider.rs  03_exchange_provider.rs  04_websocket.rs  05_builder_orders.rs
src/: constants.rs  errors.rs  lib.rs
src/providers/: agent.rs  batcher.rs  exchange.rs  info.rs  mod.rs  nonce.rs  order_tracker.rs  websocket.rs
src/signers/: mod.rs  privy.rs  signer.rs
src/types/: actions.rs  eip712.rs  info_types.rs  mod.rs  requests.rs  symbol.rs  symbols.rs  ws.rs
src/utils/: mod.rs
tests/: agent_integration_test.rs  approve_agent_test.rs  managed_exchange_test.rs  order_tracking_test.rs
