[package]
name = "ferrofluid"
description = "A Rust library for interacting with the Hyperliquid Protocol"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Copy Paste"]
license = "MIT"
repository = "https://github.com/ControlCplusControlV/ferrofluid"

[dependencies]
alloy = { version = "0.1", features = [ "full" ] }

# HTTP client stack
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["client", "http2"] }
hyper-rustls = "0.27"  # TLS support
tower = { version = "0.4", features = ["timeout", "limit", "retry"] }
http = "1"

# WebSocket
fastwebsockets = { version = "0.6", features = ["upgrade", "simd"] }
rustls = "0.23"

# JSON parsing
simd-json = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Utilities
bytes = "1.6"
dashmap = "6"
parking_lot = "0.12"
url = "2.5"
hex = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
hex = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
